rename artifact.html to art.html, and products.html to fabricues.html

--- a/gallery.html
+++ b/gallery.html
@@ -1,17 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" type="text/css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
-    <title>Mama Afrika!</title>
+    <title>African Fabric</title>
   </head>
   
      <body class=" .media-breakpoint-up(sm)  .media-breakpoint-down(md)">
@@ -20,70 +17,97 @@
     <img src="assets/images/mamam.png" width="30" height="30" alt="" loading="lazy" class="images">
   </a>
    </nav>
-     <div class="inline-block">
-      <h2>fabric designs</h2>
-   </div> 
+
+   <div>
+         <div>
+               <span>
+                 <ul class="nav justify-content-end">
+                   <li class="nav-item">
+                   <a class="nav-link active text-success" href="fabricuses.html"><strong>Fabric use</strong></a>
+                      </li>
+                      <li class="nav-item">
+                    <a class="nav-link text-success" title="Tooltip" href="art.html"><strong>Art work</strong></a></span>
+                       </li>
+                     </ul>
+               
+               </span>
+         </div>
+    </div>
 <div>
         <div>
             <div>
+                 <div class="container inline-block">
+                <h2>Fabric designs</h2>
                 <img src="assets/images/d1.png" alt="fabric" width="500" height="333"> 
                  <img src="assets/images/d3.png" alt="fabric" width="500" height="333">        
             </div>
         </div>
-
-        <div>
-              <div>
-                 <img src="assets/images/smcd5-001.jpg" alt="fabric" width="500" height="333">
-                 <img src="assets/images/sncd6.jpg" alt="fabric" width="500" height="333">
-                 <img src="assets/images/smcd9-001.jpg" alt="fabric" width="500" height="333">
-                 <img src="assets/images/smcd7.jpg" alt="fabric " width="500" height="333">
-              </div>
-     </div>
+<div class="container inline-block">
+<h5 class="bg-text"><strong>Different Look</strong></h5>
+ <ul class="list-unstyled">
+     <li class="media my-4">
+       <img class="mr-3" src="assets/images/smcd5-001.jpg" alt="products">
+        <img class="mr-3" src="assets/images/sncd6.jpg" alt="products">
+         <img class="mr-3" src="assets/images/smcd9-001.jpg" alt="products">
+          <img class="mr-3" src="assets/images/smcd7.jpg" alt="products">
+         <div class="media-body">
+        <h5 class="mt-0 mb-1"></h5>
+      </li>
+</ul>
 </div>
 
-<button type="button" class="btn btn-primary{back-ground:orange;}"data-toggle="modal" data-target=".bd-example-modal-sm">Hear you will see a video of the Masaai Dancing wearing their cultural clothes</button>
+<div class="container inline-block">
+<h5 class="bg-text"><strong>Artifacts</strong></h5>
+ <ul class="list-unstyled">
+     <li class="media my-4">
+       <img class="mr-3" src="assets/images/art2.JPG" alt="products">
+        <img class="mr-3" src="assets/images/art3.JPG" alt="products">
+         <img class="mr-3" src="assets/images/art4.JPG" alt="products">
+          <img class="mr-3" src="assets/images/art5.JPG" alt="products">
+         <div class="media-body">
+        <h5 class="mt-0 mb-1"></h5>
+      </li>
+</ul>
+</div>
+<button type="button" class="btn btn-danger "data-toggle="modal" data-target=".bd-example-modal-sm"> Cultural Masaai Dance</button>
 
 <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-sm">
-    <div class="modal-content">
+    <div class="modal-content img-overlay">
      <iframe width="560" height="315" src="https://www.youtube.com/embed/IiGKIwvpQrw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
   </div>
 </div>
-<footer class="footer container-fluid">
-   <div id="footer-details" class="row">   
+<footer class="footer aling-bottomcontainer-fluid">
+   <div id="footer-details" class="btn-info row">   
       <div class="col-md-6 col-sm-4">
-        <span><h5 class="uppercase general-sub no-gutter uppercase">SOCIAL</h5></span>
          <ul class="list-inline social-links">
            <li class="list-inline-item">
               <a target="_blank" href="https://www.facebook.com/Kitenge-111914593983140">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
+                <i class=" btn-info fa fa-facebook" aria-hidden="true"></i>
                   <span class="sr-only">Facebook</span>
               </a>
            </li>
            <li class="list-inline-item">
               <a target="_blank" href="https://twitter.com/home">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
+                <i class="btn-info fa fa-twitter" aria-hidden="true"></i>
                   <span class="sr-only">twitter</span>
               </a>
            </li>
            <li class="list-inline-item">
               <a target="_blank" href="https://www.instagram.com/">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
+                <i class=" btn-info fa fa-instagram" aria-hidden="true"></i>
                   <span class="sr-only">Instagram</span>
               </a>
            </li>
          </ul>
       </div>
-
-
-
-</footer>    
-     <!-- Optional JavaScript -->
+      <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-  
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+ 
+</footer>         
 </body>
 </html>
