--- a/about.html
+++ b/about.html
@@ -1,32 +1,18 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="UTF-8">
+  <h<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" type="text/css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
-    <title>Mama Afrika!</title>
+    <title>Afrika Cloth Designs</title>
+   <title>Mama Afrika!</title>
   </head>
     <body>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-  </body>
+   </body>
 </html>
-
-
-
-
-
 
     <title>Mama Afrika</title>
      <a class="pr-3" href="#"></a>
@@ -44,6 +30,30 @@
     <img src="assets/images/mamam.png" width="80" height="80" alt="" loading="lazy" id="mama">
    </a>
    </nav>
+   <div>
+     <hr class="my-4 inline-block">
+  <p>
+<em>On occasions and in many ways either symbolically or for practical reasons. African fabric are used in different way. This information can be accessed in the links below</em>
+</p>
+   </div>
+   <div>
+         <div>
+               <span>
+                 <ul class="nav justify-content-end">
+                   <li class="nav-item">
+                   <a class="nav-link active text-success" href="fabricuses.html"><strong>Fabric use</strong></a>
+                      </li>
+                      <li class="nav-item">
+                    <a class="nav-link text-success" title="Tooltip" href="art.html"><strong>Art work</strong></a></span>
+                       </li>
+                     <li class="nav-item">
+                    <a class="nav-link text-success" title="Tooltip" href="gallery.html"><strong>Gallery</strong></a></span>
+                       </li>
+                     </ul>
+               
+               </span>
+         </div>
+    </div>
       <div>
      
      <ul class="list-unstyled inline-block">
@@ -54,11 +64,6 @@
       Each part of Africa has a specific type of Fabric that is worn in each country.
     </div>
   </li>
-  
-  <hr class="my-4 inline-block">
-  <p>
-<em>On occasions and in many ways either symbolically or for practical reasons. African fabric are used in different way. This information can be accessed in the below sites</em>
-</p>
      </div>
  </div>
 <div>
@@ -95,37 +100,31 @@
 </div>
 </div>
 </section>
-<footer class="footer inline-block container-fluid">
-   <div id="footer-details" class="row">   
+<footer class="footer aling-bottom container-fluid">
+   <div id="footer-details" class="btn-info row">   
       <div class="col-md-6 col-sm-4">
-        <span><h5 class="uppercase general-sub no-gutter uppercase">SOCIAL</h5></span>
          <ul class="list-inline social-links">
            <li class="list-inline-item">
               <a target="_blank" href="https://www.facebook.com/Kitenge-111914593983140">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
+                <i class=" btn-info fa fa-facebook" aria-hidden="true"></i>
                   <span class="sr-only">Facebook</span>
               </a>
            </li>
            <li class="list-inline-item">
               <a target="_blank" href="https://twitter.com/home">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
+                <i class="btn-info fa fa-twitter" aria-hidden="true"></i>
                   <span class="sr-only">twitter</span>
               </a>
            </li>
            <li class="list-inline-item">
               <a target="_blank" href="https://www.instagram.com/">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
+                <i class=" btn-info fa fa-instagram" aria-hidden="true"></i>
                   <span class="sr-only">Instagram</span>
               </a>
            </li>
          </ul>
       </div>
-</footer> 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-  </body>
+</footer>     
+</body>
 
 </html>
