--- a/fabric.html
+++ b/fabric.html
@@ -1,26 +1,22 @@
 <!doctype html>
 <html lang="en">
   <head>
-<meta charset="UTF-8">
+  <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" type="text/css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <title>African Fabric</title>
-  </head>
-   
-<body>
-<section>
+    <title>Afrikan Fabric</title>
+     <body>
  <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="index.html">
     <img src="assets/images/mamam.png" width="30" height="30" alt="" loading="lazy" class="images">
   </a>
    </nav>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     </h1>
-<div>
+    <div>
          <div>
                <span>
                  <ul class="nav justify-content-end">
@@ -38,51 +34,90 @@
                </span>
          </div>
     </div>
-   
-<section class="container-fluid">
-  <div class= "row bg-color-contact">
-        <div class="col">
-                 <h3 class="contact-heading uppercase text-center text-info">We would like to hear from you.</h3>
-                  <h5 class="uppercase text-center">Drop us a text!</h5>
-        <div class="center-form">
-            <form> 
-                <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required/>
-                 <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required/>
-                 <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="project description" required></textarea>
-                 <div class="form-row text-center">
-                       <div class="col">
-                     <button type="submit" class="btn btn-danger">Send Your Inquiry</button>
-                   </div>
-                </div>
-              </form>
+
+
+<div>
+<div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+              <a class="pr-3" href="fabricuses.html"><strong>Fabric uses</strong></a></button>
+               <a class="pr-3" href="artifacts.html"><strong>Art</strong></a></button>
+
+        </div>
+
+</div>
+<section class="container-fluid">    
+  <div class="col-md-8 bg-color-three-reasons section-column">
+     <div class="row">
+        <div col>
+          <h3 class="section-heading uppercase">
+           Fabric Uses
+          </h3>
         </div>
       </div>
-</section>
+    <div class="col-4 bg-color-three-reasons section-column">
+    <div class="row">
+     <div col>
+      <div class="row">
+        <div class="col-10 offset-1 offset-sm-0 col-sm-4 col0-sm-6 ">
+          <div class="row">
+             <div class="col-4">
+               <i class="three-reasons-icon fa fa-tv" aria-hidden="true"></i>
+             </div>
+               <div class="col-10">
+                  <h5 class="three-reasons-heading uppercase">Gifts</h5>
+                        <p>
+                          Wall Art Decoration
+                          The traditional batik technique fabric that can also be framed or 
+                          otherwise hung up on the wall as a decorative batik artwork.
+                        </p>
+               </div>
+            </div>
+        </div>
+        <div class="col-10 offset-1 offset-sm-0 col-sm-4 col0-sm-6 ">
+          <div class="row">
+             <div class="col-4">
+               <i class="three-reasons-icon fa fa-gears" aria-hidden="true"></i>
+             </div>
+               <div class="col-10">
+                  <h5 class="three-reasons-heading uppercase">Fashion Design</h5>
+                      <p>
+                        In the Modern designs Kitenges in urban pop African design as hoodies, trousers, and accessories such as bags.   
+                      </p> 
+               </div>
+            </div>
+        </div> 
+        </div>
+     </div>
+   </div>
 </div>
- <footer class="footer aling-bottom container-fluid">
-   <div id="footer-details" class="btn-info row">   
+</section>
+
+
+</div>
+
+    <footer class="footer aling-bottom container-fluid">
+   <div id="footer-details" class="row">   
       <div class="col-md-6 col-sm-4">
          <ul class="list-inline social-links">
            <li class="list-inline-item">
               <a target="_blank" href="https://www.facebook.com/Kitenge-111914593983140">
-                <i class=" btn-info fa fa-facebook" aria-hidden="true"></i>
+                <i class="fa fa-facebook" aria-hidden="true"></i>
                   <span class="sr-only">Facebook</span>
               </a>
            </li>
            <li class="list-inline-item">
               <a target="_blank" href="https://twitter.com/home">
-                <i class="btn-info fa fa-twitter" aria-hidden="true"></i>
+                <i class="fa fa-twitter" aria-hidden="true"></i>
                   <span class="sr-only">twitter</span>
               </a>
            </li>
            <li class="list-inline-item">
               <a target="_blank" href="https://www.instagram.com/">
-                <i class=" btn-info fa fa-instagram" aria-hidden="true"></i>
+                <i class="fa fa-instagram" aria-hidden="true"></i>
                   <span class="sr-only">Instagram</span>
               </a>
            </li>
          </ul>
       </div>
-</footer>       
- </body>
+</footer>    
+</body>
 </html>
