--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
   <h<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" type="text/css">
@@ -10,7 +11,7 @@
     <title>Afrika Cloth Designs</title>
    <title>Mama Afrika!</title>
   </head>
-    <body>
+    <body id="bgimg1">
    </body>
 </html>
 
@@ -32,22 +33,22 @@
    </nav>
    <div>
      <hr class="my-4 inline-block">
-  <p>
+  <p><span>
 <em>On occasions and in many ways either symbolically or for practical reasons. African fabric are used in different way. This information can be accessed in the links below</em>
-</p>
+</p></span>
    </div>
    <div>
          <div>
                <span>
                  <ul class="nav justify-content-end">
                    <li class="nav-item">
-                   <a class="nav-link active text-success" href="fabricuses.html"><strong>Fabric use</strong></a>
+                   <a class="nav-link btn active" href="fabricuses.html"><strong>Fabric use</strong></a>
                       </li>
                       <li class="nav-item">
-                    <a class="nav-link text-success" title="Tooltip" href="art.html"><strong>Art work</strong></a></span>
+                    <a class="nav-link btn active" title="Tooltip" href="art.html"><strong>Art work</strong></a></span>
                        </li>
                      <li class="nav-item">
-                    <a class="nav-link text-success" title="Tooltip" href="gallery.html"><strong>Gallery</strong></a></span>
+                    <a class="nav-link btn active" title="Tooltip" href="gallery.html"><strong>Gallery</strong></a></span>
                        </li>
                      </ul>
                
@@ -56,30 +57,31 @@
     </div>
       <div>
      
-     <ul class="list-unstyled inline-block">
-     <li class="media my-4">
+     <ul class="mt-0-1 vh ">
+     <li class="mt-0-1 vh">
     <img class="mr-3" src="assets/images/africafab.png" alt="Generic placeholder image">
     <div class="media-body">
-      <h5 class="mt-0 mb-1"></h5>
-      Each part of Africa has a specific type of Fabric that is worn in each country.
+      <h5 class="mt-0-1 vh "></h5>
+      <span>
+      Each part of Africa has a specific type of Fabric that is worn in each country.</span>
     </div>
   </li>
      </div>
  </div>
 <div>
-      <div class="media text-left mt-3 inline-block">
+      <div class="mt-0-1 vh">
           <img class="mr-3" src="assets/images/africa.jpeg" class="rounded mx-auto d-block"alt="Generic placeholder image" id="africa">
           <div class="media-body">
-           <h5 class="mt-0 card-title"><strong>African fabric</strong></h5>
-                         <p>  Each part of Africa has a specific type of Fabric that is worn in each country.
+           <span><h5 class=" font-weight- hidden mt-0 card-title"><strong>African fabric</strong></h5></span>
+                        <span> <p>  Each part of Africa has a specific type of Fabric that is worn in each country.
                           In the West African, and Central Africa they have a specific fabric like sarong,
                           often worn by women and wrapped around the chest or waist, over the head as a 
                           headscarf, or as a baby sling. Kitenges are like kangas and kikoy but are of a
                           thicker cloth and have an edging along each side. 
                           Kenya, Uganda, Tanzania, Sudan, Nigeria, Cameroon, Ghana, Senegal, Liberia,
                          Rwanda, and Democratic Republic of the Congo are some of the African countries where kitenge is worn.
-                           </p>
-    <div class="media mt-3 text-right">
+                           </p></span>
+    <div class="mt-0-1 vh">
       <div class="media-body">
         <a class="pr-3" href="atifacts.html">
          <a>
