--- a/fabric.html
+++ b/fabric.html
@@ -4,30 +4,32 @@
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" type="text/css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <title>Afrikan Fabric</title>
-     <body>
- <nav class="navbar navbar-light bg-light">
+     <body id="bgimg1">
+ <div class="col inline-block">
+     <nav class=" row  navbar navbar-light bg-light">
   <a class="navbar-brand" href="index.html">
-    <img src="assets/images/mamam.png" width="30" height="30" alt="" loading="lazy" class="images">
-  </a>
+    <img src="assets/images/mamam.png" width="80" height="80" alt="" loading="lazy" id="mama">
+   </a>
    </nav>
     </h1>
     <div>
          <div>
                <span>
-                 <ul class="nav justify-content-end">
+                 <ul class="nav fixed justify-content-end">
                    <li class="nav-item">
-                   <a class="nav-link active text-success" href="fabricuses.html"><strong>Fabric use</strong></a>
+                   <a class="nav-link active btn" href="fabricuses.html"><strong>Fabric use</strong></a>
                       </li>
                       <li class="nav-item">
-                    <a class="nav-link text-success" title="Tooltip" href="art.html"><strong>Art work</strong></a></span>
+                    <a class="nav-link active btn" title="Tooltip" href="art.html"><strong>Art work</strong></a></span>
                        </li>
                      <li class="nav-item">
-                    <a class="nav-link text-success" title="Tooltip" href="gallery.html"><strong>Gallery</strong></a></span>
+                    <a class="nav-link btn active" title="Tooltip" href="gallery.html"><strong>Gallery</strong></a></span>
                        </li>
                      </ul>
                
