--- a/fabricuses.html
+++ b/fabricuses.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
    <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" type="text/css">
@@ -12,21 +13,14 @@
   </head>
     <body>
      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-  </body>
 </html>
-
-    <title>Mama Afrika</title>
-     <a class="pr-3" href="#"></a>
   </head>
-  <body>
+  <body id="bgimg1">
   <section>
-<div class="row container-fluid">
-<!-- Just an image -->
-<div class="row">
-    <div class="col">
+<div class="row container-fluid">>
 
-      <div class="col">
-     <nav class=" row col navbar navbar-light bg-light">
+      <div class="col inline-block">
+     <nav class=" row  navbar navbar-light bg-light">
   <a class="navbar-brand" href="index.html">
     <img src="assets/images/mamam.png" width="80" height="80" alt="" loading="lazy" id="mama">
    </a>
@@ -36,10 +30,10 @@
                <span>
                  <ul class="nav justify-content-end">
                      <li class="nav-item">
-                    <a class="nav-link text-success" title="Tooltip" href="gallery.html"><strong>Gallery</strong></a></span>
+                    <a class="nav-link btn active" title="Tooltip" href="gallery.html"><strong>Gallery</strong></a></span>
                        </li>
                        <li class="nav-item">
-                    <a class="nav-link text-success" title="Tooltip" href="art.html"><strong>Art work</strong></a></span>
+                    <a class="nav-link btn active" title="Tooltip" href="art.html"><strong>Art work</strong></a></span>
                        </li>
                      </ul>
                
@@ -47,53 +41,48 @@
          </div>
     </div>
  </div>
- <div>
-     <ul class="list-unstyled">
-     <li class="media my-4">
-    <img class="mr-3" src="assets/images/d1.png" alt="Generic placeholder image">
-    <div class="media-body">
-      <h5 class="mt-0 mb-1"> Batik fabrics</h5>
-      This image shows diffent types of fabric prints.
+ <div class="mt-0-1 vh">
+  <h5 class="wrapper mt-0 mb-1"> Batik fabrics</h5>
+    <img class="mr-3" src="assets/images/d1.png" alt="...">
+     <p>This image shows diffent types of fabric prints.
      In the Eastern part of Africa call it is Chitenge/ Kitenge. 
     Kenya, Uganda, Tanzania, Sudan, In the western part of Africa wear Ankara. 
     Nigeria, Cameroon, Ghana, Senegal, Liberia, Rwanda, and Democratic Republic of the Congo.
+    </p>
+    </div>
+
+<div class="mt-0-1 vh">
+  <h5 class="wrapper mt-0 mb-1"> Early stages of batik fabric</h5>
+    <img class="mr-3" src="assets/images/d2.png" alt="...">
+     <p> In this image we see women in the village preparing color that will be used to print the batik fabric..
+    </p>
+    </div>
 
     </div>
   </li>
-  <li class="media">
-    <img class="mr-3" src="assets/images/d2.png" alt="Generic placeholder image">
-    <div class="media-body">
-      <h5 class="mt-0 mb-1">Early stages of batik fabric</h5>
-      In this image we see women in the village preparing color that will be used to print the batik fabric.
-    </div>
-  </li>
-  <li class="media my-4">
-    <img class="mr-3" src="assets/images/d3.png" alt="Generic placeholder image">
-    <div class="media-body">
-      <h5 class="mt-0 mb-1">Clothe designs</h5>
-     On occasions and in many ways either symbolically or for practical reasons. 
+   <li class="mt-0-1 vh">
+    <h5 class="wrapper mt-0  mb-1">Clothe designs</h5>
+    <img class="mr-3" src="assets/images/d3.png" alt="placeholder image">
+    <p>  On occasions and in many ways either symbolically or for practical reasons. 
      Chitenges are used in different settings to convey messages. The following list 
-     demonstrates uses of the cloths. 
+     demonstrates uses of the cloths</p>
+     </div>
+  </li>
+  <li class="mt-0-1 vh">
+     <h5 class="wrapper mt-0 mb-1">Gifts</h5>
+    <img class="mr-3" src="assets/images/d4.png" alt="placeholder image">
+      <p>They can also be used to create modern  gifts to young women such as jewellery.</p>	
     </div>
   </li>
-  <li class="media">
-    <img class="mr-3" src="assets/images/d4.png" alt="Generic placeholder image">
-    <div class="media-body">
-      <h5 class="mt-0 mb-1">Gifts</h5>
-      They can also be used to create modern  gifts to young women such as jewellery.	
+  <li class="mt-0-1 vh">
+  <h5 class="mt-0 mb-1">Hand bags</h5>
+    <img class="wrapper mr-3" src="assets/images/d5.png" alt=" placeholder image">
+     <p> This same fabric can be used to design women handbags.</p>
     </div>
   </li>
-  <li class="media">
-    <img class="mr-3" src="assets/images/d5.png" alt="Generic placeholder image">
-    <div class="media-body">
-      <h5 class="mt-0 mb-1">Hand bags</h5>
-      This same fabric can be used to design women handbags.
-    </div>
-  </li>
-  <li class="media">
-    <img class="mr-3" src="assets/images/sling1.jpg" alt="Generic placeholder image">
-    <div class="media-body">
-      <h5 class="mt-0 mb-1">Baby's Sling</h5>
+  <li class="mt-0-1 vh">
+    <h5 class="mt-0 mb-1">Baby's Sling</h5>
+    <img class="wrapper mr-3" src="assets/images/sling1.jpg" alt="placeholder image">
       They are used as a sling to hold a baby across the back of a mother. 
       They can hold the baby at the front as well, particularly when breast feeding. 
       sometimes worn by men but often worn by women and wrapped around the chest or 
