--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" type="text/css">
@@ -11,22 +12,22 @@
     <title>African Fabric</title>
   </head>
   
-     <body class=" .media-breakpoint-up(sm)  .media-breakpoint-down(md)">
- <nav class="navbar navbar-light bg-light">
+   <div class="col inline-block">
+     <nav class=" row  navbar navbar-light bg-light">
   <a class="navbar-brand" href="index.html">
-    <img src="assets/images/mamam.png" width="30" height="30" alt="" loading="lazy" class="images">
-  </a>
+    <img src="assets/images/mamam.png" width="80" height="80" alt="" loading="lazy" id="mama">
+   </a>
    </nav>
-
    <div>
+   <body id="bgimg1">
          <div>
                <span>
                  <ul class="nav justify-content-end">
                    <li class="nav-item">
-                   <a class="nav-link active text-success" href="fabricuses.html"><strong>Fabric use</strong></a>
+                   <a class="nav-link active btn" href="fabricuses.html"><strong>Fabric use</strong></a>
                       </li>
                       <li class="nav-item">
-                    <a class="nav-link text-success" title="Tooltip" href="art.html"><strong>Art work</strong></a></span>
+                    <a class="nav-link  active btn " title="Tooltip" href="art.html"><strong>Art work</strong></a></span>
                        </li>
                      </ul>
                
@@ -36,38 +37,30 @@
 <div>
         <div>
             <div>
-                 <div class="container inline-block">
+                 <div class="container">
                 <h2>Fabric designs</h2>
                 <img src="assets/images/d1.png" alt="fabric" width="500" height="333"> 
                  <img src="assets/images/d3.png" alt="fabric" width="500" height="333">        
             </div>
         </div>
-<div class="container inline-block">
-<h5 class="bg-text"><strong>Different Look</strong></h5>
- <ul class="list-unstyled">
-     <li class="media my-4">
-       <img class="mr-3" src="assets/images/smcd5-001.jpg" alt="products">
-        <img class="mr-3" src="assets/images/sncd6.jpg" alt="products">
-         <img class="mr-3" src="assets/images/smcd9-001.jpg" alt="products">
-          <img class="mr-3" src="assets/images/smcd7.jpg" alt="products">
-         <div class="media-body">
-        <h5 class="mt-0 mb-1"></h5>
-      </li>
-</ul>
+ <div class="col">
+          <div col-6>
+          <div class="media-body">
+            <div class="mt-0 mb-1">
+       <img src="assets/images/smcd5-001.jpg" class="img-fluid" alt="products">
+        <img src="assets/images/sncd6.jpg" class="img-fluid" alt="products">
+         <img src="assets/images/smcd9-001.jpg" class="img-fluid" alt="products">
+          <img  src="assets/images/smcd7.jpg" class="img-fluid" alt="products">
 </div>
+ <div class="col">
+          <div col-6>
+          <div class="media-body">
+            <div class="mt-0 mb-1">
+       <img src="assets/images/art2.JPG" class="img-fluid" alt="products">
+        <img src="assets/images/art3.JPG" class="img-fluid" alt="products">
+         <img src="assets/images/art4.JPG"  class="img-fluid"alt="products">
+          <img src="assets/images/art5.JPG" class="img-fluid" alt="products">
 
-<div class="container inline-block">
-<h5 class="bg-text"><strong>Artifacts</strong></h5>
- <ul class="list-unstyled">
-     <li class="media my-4">
-       <img class="mr-3" src="assets/images/art2.JPG" alt="products">
-        <img class="mr-3" src="assets/images/art3.JPG" alt="products">
-         <img class="mr-3" src="assets/images/art4.JPG" alt="products">
-          <img class="mr-3" src="assets/images/art5.JPG" alt="products">
-         <div class="media-body">
-        <h5 class="mt-0 mb-1"></h5>
-      </li>
-</ul>
 </div>
 <button type="button" class="btn btn-danger "data-toggle="modal" data-target=".bd-example-modal-sm"> Cultural Masaai Dance</button>
 
