--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" type="text/css">
@@ -11,12 +12,13 @@
     <title>African Fabric</title>
   </head>
    
-<body>
+<body id="bgimg1">
 <section>
- <nav class="navbar navbar-light bg-light">
+ <div class="col inline-block">
+     <nav class=" row  navbar navbar-light bg-light">
   <a class="navbar-brand" href="index.html">
-    <img src="assets/images/mamam.png" width="30" height="30" alt="" loading="lazy" class="images">
-  </a>
+    <img src="assets/images/mamam.png" width="80" height="80" alt="" loading="lazy" id="mama">
+   </a>
    </nav>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     </h1>
@@ -25,13 +27,13 @@
                <span>
                  <ul class="nav justify-content-end">
                    <li class="nav-item">
-                   <a class="nav-link active text-success" href="fabricuses.html"><strong>Fabric use</strong></a>
+                   <a class="nav-link active active btn" href="fabricuses.html"><strong>Fabric use</strong></a>
                       </li>
                       <li class="nav-item">
-                    <a class="nav-link text-success" title="Tooltip" href="art.html"><strong>Art work</strong></a></span>
+                    <a class="nav-link active btn" title="Tooltip" href="art.html"><strong>Art work</strong></a></span>
                        </li>
                      <li class="nav-item">
-                    <a class="nav-link text-success" title="Tooltip" href="gallery.html"><strong>Gallery</strong></a></span>
+                    <a class="nav-link active btn" title="Tooltip" href="gallery.html"><strong>Gallery</strong></a></span>
                        </li>
                      </ul>
                
