add image background

--- a/about.html
+++ b/about.html
@@ -8,53 +8,37 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" type="text/css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <title>Afrika Cloth Designs</title>
+    <title>African Designs</title>
    <title>Mama Afrika!</title>
-  </head>
-    <body id="bgimg1">
-   </body>
-</html>
-
-    <title>Mama Afrika</title>
-     <a class="pr-3" href="#"></a>
-  </head>
-  <body>
-  <section>
-<div class="row container-fluid">
-<!-- Just an image -->
-<div class="row">
-    <div class="col">
-
+  </head >
 <div class="col inline-block">
      <nav class=" row  navbar navbar-light bg-light">
   <a class="navbar-brand" href="index.html">
     <img src="assets/images/mamam.png" width="80" height="80" alt="" loading="lazy" id="mama">
    </a>
-   </nav>
+   <div nav-bar> 
+                 <ul class="nav justify-content-end">
+                   <li class="nav-item">
+                   <a class="nav-link active btn " href="fabricuses.html"><strong>Fabric use</strong></a>
+                      </li>
+                     <li class="nav-item">
+                    <a class="nav-link btn" title="Tooltip" href="gallery.html"><strong>Gallery</strong></a></span>
+                       </li>
+                       <li class="nav-item">
+                    <a class="nav-link btn " title="Tooltip" href="art.html"><strong>Artwork</strong></a></span>
+                       </li>
+                       <li class="nav-item">
+                     <a class="nav-link btn " title="Tooltip" href="contact.html" class="hvr-sweep-to-bottom"><strong>Contact us</strong></a>
+                    </li>
+                     </ul>
+             </div>
    <div>
-     <hr class="my-4 inline-block">
+   </nav>
+    <hr class="my-4 inline-block" id="bgimg1">
   <p><span>
 <em>On occasions and in many ways either symbolically or for practical reasons. African fabric are used in different way. This information can be accessed in the links below</em>
 </p></span>
    </div>
-   <div>
-         <div>
-               <span>
-                 <ul class="nav justify-content-end">
-                   <li class="nav-item">
-                   <a class="nav-link btn active" href="fabricuses.html"><strong>Fabric use</strong></a>
-                      </li>
-                      <li class="nav-item">
-                    <a class="nav-link btn active" title="Tooltip" href="art.html"><strong>Art work</strong></a></span>
-                       </li>
-                     <li class="nav-item">
-                    <a class="nav-link btn active" title="Tooltip" href="gallery.html"><strong>Gallery</strong></a></span>
-                       </li>
-                     </ul>
-               
-               </span>
-         </div>
-    </div>
       <div>
      
      <ul class="mt-0-1 vh ">
@@ -62,7 +46,7 @@
     <img class="mr-3" src="assets/images/africafab.png" alt="Generic placeholder image">
     <div class="media-body">
       <h5 class="mt-0-1 vh "></h5>
-      <span>
+      <span class="text-light">
       Each part of Africa has a specific type of Fabric that is worn in each country.</span>
     </div>
   </li>
