--- a/fabric.html
+++ b/fabric.html
@@ -16,9 +16,7 @@
   <a class="navbar-brand" href="index.html">
     <img src="assets/images/mamam.png" width="80" height="80" alt="" loading="lazy" id="mama">
    </a>
-   </nav>
-    </h1>
-    <div>
+   <div>
          <div>
                <span>
                  <ul class="nav fixed justify-content-end">
@@ -36,8 +34,8 @@
                </span>
          </div>
     </div>
-
-
+   </nav>
+    </h1>
 <div>
 <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
               <a class="pr-3" href="fabricuses.html"><strong>Fabric uses</strong></a></button>
@@ -65,8 +63,8 @@
                <i class="three-reasons-icon fa fa-tv" aria-hidden="true"></i>
              </div>
                <div class="col-10">
-                  <h5 class="three-reasons-heading uppercase">Gifts</h5>
-                        <p>
+                  <h5 class="three-reasons-heading uppercase text-lght">Gifts</h5>
+                        <p class="text-light">
                           Wall Art Decoration
                           The traditional batik technique fabric that can also be framed or 
                           otherwise hung up on the wall as a decorative batik artwork.
@@ -80,8 +78,8 @@
                <i class="three-reasons-icon fa fa-gears" aria-hidden="true"></i>
              </div>
                <div class="col-10">
-                  <h5 class="three-reasons-heading uppercase">Fashion Design</h5>
-                      <p>
+                  <h5 class="three-reasons-heading uppercase text-light">Fashion Design</h5>
+                      <p class="text-light"> 
                         In the Modern designs Kitenges in urban pop African design as hoodies, trousers, and accessories such as bags.   
                       </p> 
                </div>
