--- a/fabricuses.html
+++ b/fabricuses.html
@@ -17,14 +17,13 @@
   </head>
   <body id="bgimg1">
   <section>
-<div class="row container-fluid">>
+<div class="row container-fluid">
 
       <div class="col inline-block">
      <nav class=" row  navbar navbar-light bg-light">
   <a class="navbar-brand" href="index.html">
     <img src="assets/images/mamam.png" width="80" height="80" alt="" loading="lazy" id="mama">
    </a>
-   </nav>
    <div>
          <div>
                <span>
@@ -40,11 +39,13 @@
                </span>
          </div>
     </div>
+   </nav>
+
  </div>
  <div class="mt-0-1 vh">
-  <h5 class="wrapper mt-0 mb-1"> Batik fabrics</h5>
+  <h5 class="wrapper mt-0 mb-1 text-light"> Batik fabrics</h5>
     <img class="mr-3" src="assets/images/d1.png" alt="...">
-     <p>This image shows diffent types of fabric prints.
+     <p class="text-light">This image shows diffent types of fabric prints.
      In the Eastern part of Africa call it is Chitenge/ Kitenge. 
     Kenya, Uganda, Tanzania, Sudan, In the western part of Africa wear Ankara. 
     Nigeria, Cameroon, Ghana, Senegal, Liberia, Rwanda, and Democratic Republic of the Congo.
@@ -52,18 +53,18 @@
     </div>
 
 <div class="mt-0-1 vh">
-  <h5 class="wrapper mt-0 mb-1"> Early stages of batik fabric</h5>
+  <h5 class="wrapper mt-0 mb-1 text-light"> Early stages of batik fabric</h5>
     <img class="mr-3" src="assets/images/d2.png" alt="...">
-     <p> In this image we see women in the village preparing color that will be used to print the batik fabric..
+     <p class="text-light"> In this image we see women in the village preparing color that will be used to print the batik fabric..
     </p>
     </div>
 
     </div>
   </li>
    <li class="mt-0-1 vh">
-    <h5 class="wrapper mt-0  mb-1">Clothe designs</h5>
+    <h5 class="wrapper mt-0  mb-1 text-light">Clothes designs</h5>
     <img class="mr-3" src="assets/images/d3.png" alt="placeholder image">
-    <p>  On occasions and in many ways either symbolically or for practical reasons. 
+    <p class="text-light">  On occasions and in many ways either symbolically or for practical reasons. 
      Chitenges are used in different settings to convey messages. The following list 
      demonstrates uses of the cloths</p>
      </div>
@@ -71,22 +72,22 @@
   <li class="mt-0-1 vh">
      <h5 class="wrapper mt-0 mb-1">Gifts</h5>
     <img class="mr-3" src="assets/images/d4.png" alt="placeholder image">
-      <p>They can also be used to create modern  gifts to young women such as jewellery.</p>	
+      <p class="text-light">They can also be used to create modern  gifts to young women such as jewellery.</p>	
     </div>
   </li>
   <li class="mt-0-1 vh">
-  <h5 class="mt-0 mb-1">Hand bags</h5>
+  <h5 class="mt-0 mb-1 text-light">Hand bags</h5>
     <img class="wrapper mr-3" src="assets/images/d5.png" alt=" placeholder image">
-     <p> This same fabric can be used to design women handbags.</p>
+     <p class="text-light"> This same fabric can be used to design women handbags.</p>
     </div>
   </li>
   <li class="mt-0-1 vh">
-    <h5 class="mt-0 mb-1">Baby's Sling</h5>
+    <h5 class="mt-0 mb-1 text-light">Baby's Sling</h5>
     <img class="wrapper mr-3" src="assets/images/sling1.jpg" alt="placeholder image">
-      They are used as a sling to hold a baby across the back of a mother. 
+      <p class="text-light">They are used as a sling to hold a baby across the back of a mother. 
       They can hold the baby at the front as well, particularly when breast feeding. 
       sometimes worn by men but often worn by women and wrapped around the chest or 
-      waist, over the head as a headscarf, or as a baby sling
+      waist, over the head as a headscarf, or as a baby sling</p>
   </li>
 </ul>
 </div>
