--- a/gallery.html
+++ b/gallery.html
@@ -11,28 +11,26 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <title>African Fabric</title>
   </head>
-  
    <div class="col inline-block">
      <nav class=" row  navbar navbar-light bg-light">
   <a class="navbar-brand" href="index.html">
     <img src="assets/images/mamam.png" width="80" height="80" alt="" loading="lazy" id="mama">
    </a>
-   </nav>
-   <div>
-   <body id="bgimg1">
-         <div>
-               <span>
-                 <ul class="nav justify-content-end">
-                   <li class="nav-item">
+    <div>
+        <span>
+             <ul class="nav justify-content-end">
+                <li class="nav-item">
                    <a class="nav-link active btn" href="fabricuses.html"><strong>Fabric use</strong></a>
-                      </li>
-                      <li class="nav-item">
-                    <a class="nav-link  active btn " title="Tooltip" href="art.html"><strong>Art work</strong></a></span>
-                       </li>
-                     </ul>
-               
-               </span>
-         </div>
+             </li>
+             <li class="nav-item">
+            <a class="nav-link  active btn " title="Tooltip" href="art.html"><strong>Art work</strong></a></span>
+            </li>
+             </ul>
+    </span>
+  </div>
+   </nav>
+  </div>
+   <body>
     </div>
 <div>
         <div>
