--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <a class="navbar-brand" href="index.html">
     <img src="assets/images/mamam.png" width="80" height="80" alt="" loading="lazy" id="mama">
    </a>
-   </nav>
-         <div nav-bar> 
+    <nav>
+             <div class="justify-content-end">
                  <ul class="nav justify-content-end">
                    <li class="nav-item">
                    <a class="nav-link active btn " href="fabricuses.html"><strong>Fabric use</strong></a>
@@ -34,10 +34,8 @@
                     </li>
                      </ul>
              </div>
-        </div>
    </nav>
-   </span>
-</div>
+<div>
 </header>
 <div class="background-image" id="bgimg">
 
