modified the size of the logo

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
  <div class="col inline-block">
      <nav class=" row  navbar navbar-light bg-light">
   <a class="navbar-brand" href="index.html">
-    <img src="assets/images/mamam.png" width="80" height="80" alt="" loading="lazy" id="mama">
+      <img  src="assets/images/mamam.png" width="120" height="120" HOME alt="" loading="lazy" id="mama"></i>
    </a>
     <div>
          <div>
