--- a/fabricuses.html
+++ b/fabricuses.html
@@ -11,10 +11,6 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <title>African Fabric</title>
   </head>
-    <body>
-     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-</html>
-  </head>
   <body id="bgimg1">
   <section>
 <div class="row container-fluid">
@@ -22,7 +18,7 @@
       <div class="col inline-block">
      <nav class=" row  navbar navbar-light bg-light">
   <a class="navbar-brand" href="index.html">
-    <img src="assets/images/mamam.png" width="80" height="80" alt="" loading="lazy" id="mama">
+      <img  src="assets/images/mamam.png" width="120" height="120" HOME alt="" loading="lazy" id="mama"></i>
    </a>
    <div>
          <div>
