--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="col inline-block">
      <nav class=" row  navbar navbar-light bg-light">
   <a class="navbar-brand" href="index.html">
-    <img src="assets/images/mamam.png" width="80" height="80" alt="" loading="lazy" id="mama">
+    <img  src="assets/images/mamam.png" width="120" height="120" HOME alt="" loading="lazy" id="mama"></i>
    </a>
     <nav>
              <div class="justify-content-end">
@@ -44,7 +44,7 @@
    <div class="hidden caption">
         
         <h1>AFRICAN ART & DESIGNS</h1>
-        <h3>ONCE A TIME</h3>
+        <h3>MAMA AFRIKA</h3>
          <a class="btn btn-outline-light btn-lg btn-info text-center" href="about.html" >Learn More</a>
   </div>
 
