corrected typo error

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
    </nav>
     <hr class="my-4 inline-block" id="bgimg1">
   <p><span>
-<em>On occasions and in many ways either symbolically or for practical reasons. African fabric are used in different way. This information can be accessed in the links below</em>
+<em>On occasions and in many ways either symbolically or for practical reasons. African fabric are used in different way. This information can be accessed in the links above</em>
 </p></span>
    </div>
       <div>
